Add UpdatePost implementation
